Risoluzione codesmell